lil-bits/src/app/(routes)/select-drinks/drinks.module.css
.drinks_container,
.drinks_error_container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0;
  margin: 0 0 0.125rem;
}

.drinks_error_box {
  width: 95%;
  background-color: white;
  border-radius: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0.25rem 0 0.25rem;
}

.drinks_error {
  color: red;
  text-align: center;
  padding: 1rem;
}

.all_drinks_box {
  background-color: white;
  width: 95%;
  height: 40vh;
  border-radius: 1rem;
  justify-content: center;
  display: flex;
  align-items: center;
}

.all_drinks_scroll {
  overflow: scroll;
  overflow-x: hidden;
  height: 90%;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

.drinks_content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.image_and_counter {
  width: 80%;
  height: 6rem;
  border-radius: 1rem;
  position: relative;
  margin: 0 0 0.25rem;
}

.drink_image {
  object-fit: cover;
  border-radius: 1rem;
}

.drink_counter {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 3rem;
  font-weight: 900;
  text-shadow: 2px 2px 0px white, -2px -2px 0px white, 2px -2px 0px white,
    -2px 2px 0px white;
  color: black;
}

.selected_drinks_container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0;
  margin: 0.25rem 0 0.5rem;
}

.selected_drinks_box {
  width: 95%;
  background-color: white;
  border-radius: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 1rem 0 0.5rem;
  margin: 0 0 0.125rem;
  color: #a86e5f;
}

.drink_and_delete {
  display: flex;
  width: 80%;
  height: 4rem;
  justify-content: space-around;
  align-items: center;
}

.selected_drink_name {
  width: 50%;
  text-align: center;
  font-weight: 800;
}

.remove_drink_button {
  color: red;
  width: 50%;
  font-size: 2.5rem;
}

.drinks_price {
  font-weight: 700;
  margin: 0.25rem 0.5rem 0.25rem;
  color: black;
}

@media (min-width: 640px) {
  .all_drinks_box,
  .selected_drinks_box,
  .drinks_error_box {
    width: 100%;
    margin-bottom: 1rem;
  }
  .drinks_page {
    margin: 0 1rem;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
  }

  .drinks_container,
  .drinks_error_container {
    width: 70%;
    margin-right: 1rem;
  }

  .selected_drinks_container {
    width: 30%;
  }

  .selected_drinks_box {
    padding: 1rem 0;
  }

  .drink_and_delete {
    width: 100%;
  }
}

@media (min-width: 1024px) {
  .drinks_page {
    height: 80vh;
  }
  .drinks_container {
    height: 100%;
    justify-content: flex-start;
  }
  .all_drinks_box {
    height: 80%;
  }
  .all_drinks_scroll {
    grid-template-columns: repeat(3, 1fr);
  }
  .image_and_counter {
    height: 10rem;
  }
}

